# premium-pos-desktop

./: .env  .env.example  .gitignore  ANDROID_BUILD_FIX_COMPLETE.md  ANDROID_BUILD_QUICKSTART.md  ANDROID_BUILD_READY.md  ANDROID_BUILD_VERIFICATION.md  ANDROID_ICON_FIX.md  ANDROID_STORAGE_FIX.md  ANDROID_SUCCESS.md  APP_BLUEPRINT.md  APP_BLUEPRINT_V2_ENTERPRISE.md  APP_FEATURES.md  BACKEND_STRUCTURE_VERIFIED.md  BATCH_TRACKING_COMPLETE_GUIDE.md  BATCH_TRACKING_IMPLEMENTATION_PLAN.md  BATCH_TRACKING_PHASE1_SPEC.md  BUILDING_MATERIALS_IMPROVEMENTS.md  BUILD_ANDROID_COMMANDS.sh  BUILD_SIGNED_ANDROID.md  CART_FEATURE.md  CLEANUP_PLAN.md  COMPLETED_UPGRADES.md  COMPLETE_INVENTORY_GUIDE.md  COMPLETE_SUCCESS_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_BUILD_FIX.md  DASHBOARD_ENHANCEMENTS.md  DATABASE_SEEDING.md  DESIGN_IMPROVEMENTS.md  FINAL_BACKEND_STATUS.md  FINAL_FIXES.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SETUP_COMPLETE.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIX_BOTH_BUILDS.md  FIX_CARGO_VERSION.md  FIX_RUST_VERSION.md  FIX_TYPESCRIPT_CACHE.md  (+53 more)
docs/: COMPREHENSIVE_RETURNS_GUIDE.md  USER_GUIDE.md
scripts/: kill-port.ts
src/: App.tsx  globals.css  globals.css.bak  main.tsx
src-tauri/: Cargo.toml  premium-pos.keystore  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: app.rs  database.rs  database_comprehensive_returns.sql  db_utils.rs  error.rs  lib.rs  main.rs  models.rs  seeder-building-materials.rs  seeder.rs  seeder_building_materials.rs  session.rs  validation.rs
src-tauri/src/commands/: appointments.rs  auth.rs  cash_drawer.rs  customers.rs  dashboard.rs  employees.rs  expenses.rs  integrations.rs  inventory.rs  master_data.rs  mod.rs  notifications.rs  organization.rs  products.rs  promotions.rs  purchase_orders.rs  receipts.rs  reports.rs  returns.rs  sales.rs  shifts.rs  stock.rs  store.rs  suppliers.rs  sync.rs  time_tracking.rs  users.rs  variants.rs
src/components/: CalculatorComponent.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  FilterBar.tsx  GlobalSearch.tsx  LoadingState.tsx  MobileBottomNav.tsx  NotificationBadge.tsx  PageHeader.tsx  ProductVariantManager.tsx  ProtectedRoute.tsx  ReceiptPrinter.tsx  ReceiptTemplate.tsx  SalesHistory.tsx  SearchBar.tsx  SettingsApplier.tsx  SortableTableHead.tsx  StatCard.tsx  StatsCard.tsx  StatsGrid.tsx  StoreLogo.tsx  SyncStatusIndicator.tsx  TableActions.tsx
src/components/ui/: checkbox.tsx  radio-group.tsx  select.tsx  switch.tsx
src/hooks/: useAbortController.ts  useAsyncAction.ts  useCRUD.ts  useCurrency.ts  useDataTable.ts  useGlobalSearch.tsx  useRealtimeData.ts  useResponsiveNumber.ts  useSettings.ts
src/layouts/: DashboardLayout.tsx
src/lib/: api.ts  currency.ts  date-utils.ts  designSystem.ts  errorHandling.ts  financial.ts  mobile-utils.ts  notification-service.ts  offline.ts  receipt-printer.ts  responsive-numbers.ts  supabase.ts  sync-service.ts
src/pages/: Appointments.tsx  Cart.tsx  Customers.tsx  Dashboard.tsx  Employees.tsx  Employees_old_backup.tsx  Expenses.tsx  Finance.tsx  Finance_Old.tsx  Integrations.tsx  Inventory.tsx  LoginPage.tsx  MasterData.tsx  Notifications.tsx  Organization.tsx  Products.tsx  Products_old_backup.tsx  Profile.tsx  Promotions.tsx  PurchaseOrders.tsx  Reports.tsx  Returns.tsx  Sales.tsx  SalesRecords-updated.tsx  SalesRecords.tsx  Settings.tsx  Settings.tsx.backup  Suppliers.tsx  TimeTracking.tsx  Unauthorized.tsx  Users.tsx
src/services/: returnsSync.ts
src/store/: authStore.ts  cartStore.ts  settingsStore.ts  storeConfigStore.ts
src/types/: index.ts
