[package]
name = "premium-pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
directories = "5.0"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
