[package]
name = "premium-pos"
version = "0.1.0"
description = "Premium POS and Inventory Management System"
authors = ["you"]
license = ""
repository = ""
default-run = "premium-pos"
edition = "2021"
rust-version = "1.60"

[lib]
name = "premium_pos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-haptics = "2.0"
tauri-plugin-barcode-scanner = "2.0"
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
directories = "4"
chrono = { version = "0.4", features = ["serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
